--- a/Autocorrect/training/auto.ipynb
+++ b/Autocorrect/training/auto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package words to\n",
-      "[nltk_data]     C:\\Users\\varal\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\User\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Unzipping corpora\\words.zip.\n"
      ]
     },
@@ -20,7 +20,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,20 +174,22 @@
     "    if word in edit_one_set: edit_one_set.remove(word)\n",
     "    return edit_one_set\n",
     "\n",
-    "def edit_two_letter(word, allow_switches = True):\n",
+    "def edit_two_letter(word, allow_switches=True):\n",
     "    edit_two_set = set()\n",
     "    edit_one = edit_one_letter(word, allow_switches=allow_switches)\n",
-    "    for word in edit_one:\n",
-    "        if word:\n",
-    "            edit_two = edit_one_letter(word, all,  ow_switches=allow_switches)\n",
-    "            edit_two_set.update(edit_two)\n",
     "    \n",
-    "    return edit_two_set\n"
+    "    for w in edit_one:\n",
+    "        if w:\n",
+    "            edit_two = edit_one_letter(w, allow_switches=allow_switches)\n",
+    "            edit_two_set.update(edit_two)\n",
+    "\n",
+    "    return edit_two_set\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -216,13 +218,13 @@
       "word - 1: section, probability 0.000004\n",
       " \n",
       "Word - condtion\n",
-      "word - 0: conation, probability 0.000004\n",
-      "word - 1: condition, probability 0.000008\n",
+      "word - 0: condition, probability 0.000008\n",
+      "word - 1: conation, probability 0.000004\n",
       " \n",
       "Word - condotin\n",
-      "word - 0: conjoin, probability 0.000004\n",
-      "word - 1: condoling, probability 0.000004\n",
-      "word - 2: condition, probability 0.000008\n",
+      "word - 0: condoling, probability 0.000004\n",
+      "word - 1: condition, probability 0.000008\n",
+      "word - 2: conjoin, probability 0.000004\n",
       " \n",
       "Word - disdaain\n",
       "word - 0: disdain, probability 0.000004\n",
@@ -262,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
